--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 target/
+**/.setting/
+**/.classpath
+**/.project
+**/.DS_Store
+
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -7,5 +12,4 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
